[Flink][Upsert Step 4] Add DeltaUpsertWriterTask, upsert merge strategies, and RowKind routing (#6997)
#### Which Delta project/connector is this regarding?

- [ ] Spark
- [ ] Standalone
- [x] Flink
- [ ] Kernel
- [ ] Other

## Description

Step 4 of the Flink upsert sink stack. Introduces the writer-side upsert
engine. These pieces are mutually dependent (`DeltaUpsertWriterTask` ↔
`Upsert` ↔ `DeltaSinkWriter`) and cannot be split across stacked
commits, so they land together. (This PR absorbs the former "Route
RowKind through MergeStrategy" PR #6934, now closed.)

- **`DeltaUpsertWriterTask`** — dedup-aware writer task that tracks
per-PK buffer positions, replaces in place on repeat writes, and
delegates removal of superseded rows in already-dumped files to the
configured `Upsert` algorithm via `markRemovesOnStaged`.
- **Merge strategies** — `MergeStrategy` gains
`init`/`insert`/`upsert`/`delete`/`merge`; the `Upsert` base owns the
per-partition writer-task cache and per-checkpoint PK bookkeeping;
`AppendOnly` handles the append path and rejects `upsert`/`delete`.
`DeltaSinkConf.createMergeStrategy()` factory selects the strategy.
- **`DeltaSinkWriter`** — routes by `RowKind` (`INSERT`/`UPDATE_AFTER` →
`insert`/`upsert`, `DELETE` → `delete`, `UPDATE_BEFORE` dropped) through
the `MergeStrategy`, exposes `getTable()`/`getConf()`/`newWriterTask()`,
and bumps `numFilesWritten` in `prepareCommit()`.
- **`DeltaWriterTask`** — minor protected-visibility tweaks so
`DeltaUpsertWriterTask` can extend it.

Tests: `DeltaUpsertWriterTaskTest` (algorithm-agnostic, via a
`SpyUpsert` double), `DeltaSinkWriterTest` upsert paths, and
`CoWUpsertTest` updates.

Stack:
- Built on the conf+builder PR (#6933), now **merged** into `master`.
- Followed by the SQL DDL hookup (#6935) and the MoR PR (#6977), which
also depends on the DV-support PR (#6964).

Part of #5901.

## How was this patch tested?

- `build/sbt "flink/testOnly
io.delta.flink.sink.DeltaUpsertWriterTaskTest
io.delta.flink.