@@ -16,40 +16,104 @@
 
 package io.delta.flink.sink.mergestrategy;
 
-import io.delta.flink.sink.DeltaSinkConf;
-import io.delta.flink.sink.MergeStrategy;
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
+import com.github.benmanes.caffeine.cache.RemovalCause;
+import com.github.benmanes.caffeine.cache.RemovalListener;
+import io.delta.flink.Conf;
+import io.delta.flink.sink.*;
 import io.delta.flink.table.DeltaTable;
-import io.delta.kernel.data.Row;
+import io.delta.flink.table.ExceptionUtils;
 import io.delta.kernel.expressions.Literal;
-import java.util.Collections;
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import org.apache.flink.api.connector.sink2.SinkWriter;
+import org.apache.flink.table.data.RowData;
+import org.checkerframework.checker.nullness.qual.Nullable;
 
 /**
- * No-op {@link MergeStrategy} used by append-mode sinks.
+ * {@link MergeStrategy} used by append-mode sinks.
  *
  * <p>In append mode every incoming row is written via {@link DeltaTable#writeParquet} and no
- * existing files need to be modified. The writer must never call {@link #recordUpsert} or {@link
- * #recordDelete} in append mode; if it does, that's a programming error and we fail loudly.
+ * existing files need to be modified. The writer must never call {@link #delete} in append mode; if
+ * it does, that's a programming error and we fail loudly.
  */
-public class AppendOnly implements MergeStrategy {
+public class AppendOnly
+    implements MergeStrategy, RemovalListener<Map<String, String>, DeltaWriterTask> {
+
+  private Cache<Map<String, String>, DeltaWriterTask> writerTasksByPartition;
+
+  private DeltaSinkWriter writer;
+
+  private List<DeltaWriterResult> completedWrites;
+
+  public void init(DeltaSinkWriter writer) {
+    this.writer = writer;
+    this.completedWrites = new ArrayList<>();
+    this.writerTasksByPartition =
+        Caffeine.newBuilder()
+            .executor(Runnable::run)
+            .maximumSize(Conf.getInstance().getSinkWriterNumConcurrentFiles())
+            .removalListener(this)
+            .build();
+  }
 
   @Override
-  public void recordUpsert(List<Literal> primaryKey, Map<String, Literal> partitionValues) {
+  public void insert(
+      List<Literal> primaryKey,
+      Map<String, Literal> partitionValues,
+      RowData element,
+      SinkWriter.Context context) {
+
+    try {
+      writerTasksByPartition
+          .get(
+              MergeStrategy.writerKey(partitionValues),
+              (key) -> writer.newWriterTask(partitionValues))
+          .write(element, context);
+    } catch (Exception e) {
+      throw ExceptionUtils.wrap(e);
+    }
+  }
+
+  @Override
+  public void upsert(
+      List<Literal> primaryKey,
+      Map<String, Literal> partitionValues,
+      RowData element,
+      SinkWriter.Context context) {
     throw new IllegalStateException(
-        "AppendOnlyMergeStrategy received an upsert record; this should only happen in "
+        "AppendOnlyMergeStrategy received a upsert record; this should only happen in "
             + "upsert mode.");
   }
 
   @Override
-  public void recordDelete(List<Literal> primaryKey, Map<String, Literal> partitionValues) {
+  public void delete(List<Literal> primaryKey, Map<String, Literal> partitionValues) {
     throw new IllegalStateException(
         "AppendOnlyMergeStrategy received a delete record; this should only happen in "
             + "upsert mode.");
   }
 
   @Override
-  public List<Row> merge(DeltaTable table, DeltaSinkConf conf) {
-    return Collections.emptyList();
+  public List<DeltaWriterResult> merge() {
+    writerTasksByPartition.invalidateAll();
+    List<DeltaWriterResult> results = List.copyOf(completedWrites);
+    completedWrites.clear();
+    return results;
+  }
+
+  @Override
+  public void onRemoval(
+      @Nullable Map<String, String> key, @Nullable DeltaWriterTask value, RemovalCause cause) {
+    // Close the evicted task and collect its result
+    try {
+      if (value != null) {
+        completedWrites.addAll(value.complete());
+      }
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    }
   }
 }
